zooming has to be implemented properly (see koffice@kde.org).

2000-06-11 -David Faure <faure@kde.org>
-----------------------------------------------------
- Cleaned up code for resizing row/column (created paintSizeIndicator to avoid
code duplication and got rid of yellow background :))
- Many fixes in KSpreadDlgLayout (removed hardcoded colorgroups, etc.)
- Made KSpreadLayout return a proper color in textColor() and bgColor()
even if default.

2000-06-11 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-Changed some dlg->show() by if(dlg->exec())
because when you press on "cancel", it's not necessary to recalc all
or refresh cell.
-Used new icon loxx-action-delete_table.png
-Insert code of patch created by ...
Now you can go to a selection with kspread_dlg_goto for
example A5:B5

2000-06-14 -David Faure <faure@kde.org>
-----------------------------------------------------
- Fixed what I broke in changeNameCellRef, by completely rewriting it :
  Now Unicode safe ; uses KSpreadPoint to do most of the parsing.
  Also allows spaces in table names - for when KScript supports it too.
  Merged changeNameCellRef and changeNameCellRef2 (added arg 'fullRowOrColumn')
  This fixes inserting/removing rows/columns/cells.

2000-06-19-Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-Rewrite multirow function, now it works
-Now you can show comment when you move mouse on red triangle
there is a bug in new qdom because when I try to load a comment
qdom remove all '\n'
=>showComment doesn't work and blocks kspread

2000-06-19-Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-Now multirow work when you choose "Middle","Bottom"
-Add new icon lo16-action-series.png created by j.martin
<jpmartin@iroise.com> thanks
-Now commentLabel works but I can't reload comment
bug in qdom (qdom removes '\n')